<resources>

    <string name="app_name">Qarz daftar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="Qarzdaftar">Qarz Daftar</string>
    <string name="Royhatdan_otish">Ro`yhatdan o`tish</string>
    <string name="avval_registratsiya">Avval ro`yhatdan o`tganmisiz?</string>
    <string name="familya">Familyangiz: *</string>
    <string name="ism">Ismingiz: *</string>
    <string name="pasport_Seria">Passport Seriasi: *</string>
    <string name="Tugilgan_sana">Tug`ilgan sana: *</string>
    <string name="Email">Email: *</string>
    <string name="Keyingi">Keyingi</string>
    <string name="hudud">Yashash hududingiz: *</string>
    <string name="ijtimoiy_holat">Ijtimoiy holat: *</string>
    <string name="parol_kiriting">Parol kiriting: *</string>
    <string name="parolni_tasdiqlang">Parolni tasdinglang: *</string>
    <string name="tel_nomer">Nomeringizni kiriting: *</string>
    <string name="kod_yuborish">Xizmat xafvsizligini ta\'minlash maqsadida sizga kod yuboriladi</string>
    <string name="vaqt">Vaqt: 1:59</string>
    <string name="kod">KOD:</string>
    <string name="Tugallash">Tugallash</string>
    <string name="log_in">Tizimga kirish</string>
    <string name="parolni_unutish">Parolingizni unutdingizmi?</string>
    <string name="kirish">Kirish</string>
    <string name="parolni_tiklash">Parolni tiklash</string>
    <string name="yangi_parol_kiriting">Yangi parol kiriting: *</string>
    <string name="qarzlar">Qarzlar</string>
    <string name="ayiriboshlash">Ayiriboshlash</string>
    <string name="tarix">Tarix</string>
    <string name="tolovlar">To`lovlar</string>
    <string name="dostlarga_ulashish">Do`stlarga ulashish</string>
    <string name="biz_haqimizda">Biz haqimizda</string>
    <string name="suhbatlar">Suhbatlar</string>
    <string name="savdo_sotiq">Savdo-sotiq</string>
    <string name="profilim">Profilim</string>
    <string name="sotib_olish">Sotib olish</string>
    <string name="sotish">Sotish</string>
    <string name="savdolar_tarixi">Savdolar tarixi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="share">Do`stlarga yuborish</string>
    <string name="about_us">Biz haqimizda!</string>
    <string name="log_out">Profildan chiqish</string>
    <string name="tanlanganlar">Saralanganlar</string>
    <string name="aloqa">Aloqa</string>
    <string name="narsa_berish">Narsa berish</string>
    <string name="narsa_olish">Narsa olish</string>
    <string name="ayiriboshlash_tarixi">Ayiriboshlash tarixi</string>
    <string name="qarz_berish">Qarz berish</string>
    <string name="qarz_olish">Qarz olish</string>
    <string name="qarzlar_tarixi">Qarzlar tarixi</string>
    <string name="Balans">Balans:</string>
    <string name="umumiy_qarz">Umumiy qarzlar:</string>
    <string name="sizdan_qarzlar">Sizdan qarzlar:</string>
    <string name="umumiy_hisob">Umumiy hisob:</string>
    <string name="parol_qoyish">Parol qo`yish:</string>
    <string name="tizim_parolini_ozgartirish">Tizim parolini o`zgartirish:</string>

</resources>
