<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Asosiy.Ayiriboshlash.ayiriboshlash">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tab_layout"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorColor="#000"
            app:tabTextColor="#000">

            <com.google.android.material.tabs.TabItem
                android:text="@string/narsa_berish"
                android:id="@+id/narsa_berish_tabLayout"
                android:layout_height="50dp"
                android:layout_width="wrap_content"/>

            <com.google.android.material.tabs.TabItem
                android:text="@string/narsa_olish"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:id="@+id/narsa_olish_tabLayout"/>

            <com.google.android.material.tabs.TabItem
                android:text="@string/ayiriboshlash_tarixi"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:id="@+id/ayiriboshlash_tarixi_tabLayout"/>


        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>