<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Asosiy.Profilim.profilim_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/aylana"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shohjahon Totliboyev"
                    android:fontFamily="@font/convergence"
                    android:textSize="26sp"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="93 663 66 16"
                    android:fontFamily="@font/convergence"
                    android:textSize="26sp"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="1sp"
            android:background="#000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Balans"
                    android:theme="@style/balans"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/balans"
                    android:text="2000"
                    android:layout_marginLeft="220dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umumiy_qarz"
                    android:theme="@style/balans"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/balans"
                    android:text="500"
                    android:layout_marginLeft="120dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sizdan_qarzlar"
                    android:theme="@style/balans"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/balans"
                    android:text="1500"
                    android:layout_marginLeft="130dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="1sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="155dp"
                android:background="#000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umumiy_hisob"
                    android:theme="@style/balans"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/balans"
                    android:text="3000"
                    android:layout_marginLeft="130dp"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="2sp"
            android:background="#FFFF0000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parol_qoyish"
            android:theme="@style/balans"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tizim_parolini_ozgartirish"
            android:theme="@style/balans"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>