<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Registratsiya.LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:src="@drawable/back_icon"></ImageView>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:src="@drawable/daftar_rasm"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/Qarzdaftar" />

        </LinearLayout>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sahitya"
            android:text="@string/log_in"
            android:textColor="#1091C9"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1">

        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/tel_nomer"
                android:theme="@style/royhat" />

            <EditText
                android:layout_width="287dp"
                android:layout_height="52dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/kok_fon_registratsiya" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/pasport_Seria"
                android:theme="@style/royhat" />

            <EditText
                android:layout_width="287dp"
                android:layout_height="52dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/kok_fon_registratsiya" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/parol_kiriting"
                android:theme="@style/royhat" />

            <EditText
                android:layout_width="287dp"
                android:layout_height="52dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/kok_fon_registratsiya" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/parolni_unutish"
            android:onClick="parolni_unutish"
            android:layout_marginTop="20dp"
            android:theme="@style/royhat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout3" />


        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="57dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/kok_liniya"
            android:onClick="next"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:text="@string/kirish"
                android:textColor="#00AEF9"
                android:textSize="36sp">

            </TextView>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/next_icon" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>